# ofxstatement-satispay

./: .gitignore  pyproject.toml
.github/workflows/: checks.yaml  publish.yaml  test.yml
src/ofxstatement_satispay/: plugin.py  utils.py
tests/: satispay-statement.csv  test_satispay.py  test_utils.py
