[tool.poetry]
name = "ofxstatement-satispay"
version = "0.0.0"
description = "A ofxstatement plugin to manage Satispay CSVs"
authors = ["bennesp <bennesp@users.noreply.github.com>"]
readme = "README.md"
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement"]
homepage = "https://github.com/bennesp/ofxstatement-satispay"

[tool.poetry.plugins."ofxstatement"]
satispay = "ofxstatement_satispay.plugin:SatispayPlugin"

[tool.poetry.dependencies]
python = ">=3.8.1"
ofxstatement = "^0.9.1"
babel = "^2.15.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
bandit = "^1.7.9"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
